shell/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app:
  template:
    metadata:
      labels:
        app:
    spec:
      serviceAccountName:
      containers:
      - name:
        image:
        imagePullPolicy: Always
        ports:
        - containerPort:
          protocol: TCP
        resources:
          limits:
            cpu:
          requests:
            cpu:
